--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,16 @@
 body {
     background-color: skyblue;
 }
+
+.search-container {
+    margin-top: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.input-group {
+    max-width: 400px;
+    width: 100%;
+}
